# agentic-data-engineer

./: .catalog.yml  .claude  .gitignore  .gitmodules  .jsonlintrc  .mcp.json  .pre-commit-config.yaml  .specify  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  PACKAGING.md  PROJECT_README.md  README.md  databricks.yaml  databricks.yaml.tmpl  openspec  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  schema  shared_agents_usage_docs  shared_schema  shared_scripts  skyscanner_conceptual_model.txt
.claude/agents/: agent-template.md  architecture-agent.md  bronze-table-finder-agent.md  bronze-table-finder.md  claude-agent-template-generator.md  coding-agent.md  data-naming-agent.md  data-profiler-agent.md  data-profiler.md  data-project-generator-agent.md  data-project-generator.md  databricks-project-generator.md  decision-documenter-agent.md  decision-documenter.md  dimensional-modeling-agent.md  documentation-agent.md  medallion-architecture-agent.md  naming-agent.md  silver-data-modeling-agent.md  testing-agent.md
.claude/agents/shared/: claude-agent-template-generator.md  data-contract-agent.md  data-project-generator-agent.md  dimensional-modeling-agent.md  makefile-formatter-agent.md  project-structure-agent.md  silver-data-modeling-agent.md  streaming-tables-agent.md  testing-agent.md
.claude/skills/dbdiagram-skill/: SKILL.md
.claude/skills/json-formatter-skill/: SKILL.md
.claude/skills/pdf-creator-skill/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: cleanup.yaml  data-catalog-utils-ci.yml  data-shared-utils-ci.yml  databricks-shared-utilities-ci.yml  databricks-uc-utilities-ci.yml  main.yaml  spark-session-utilities-ci.yml  spark-session-utils-ci.yml
.specify/memory/: constitution.md
config/env_config/: dev.yaml  lab.yaml  local.yaml  prod.yaml  readme_spark_config.md  spark_config_schema.yaml  test-data-quality.yaml  test-integration.yaml  test-unit.yaml
config/spark/: dev.yaml  lab.yaml  local.yaml  prod.yaml
config/table_metadata/: readme_table_metadata.md  table_metadata_schema.yaml
config/table_metadata/example_data_product/: example_flight_search_intent.yaml
data-ai-agents/: README.md  pyproject.toml
data-ai-agents/agents/: __init__.py  base.py
data-ai-agents/cli/: __init__.py  main.py
data-ai-agents/config/: agent_definition.yaml
data-ai-agents/mcp/: server.py
data-project-artefacts/: .gitignore  README.md  databricks.yaml  pyproject.toml
data-project-artefacts/.github/agents/: speckit.constitution.agent.md
data-project-artefacts/.github/workflows/: main.yaml
data-project-artefacts/data-engineering/: .catalog.yml  .mcp.json  .pre-commit-config.yaml  .yamllint  Makefile  README.md  databricks.yaml
data_specs/: flight_search_intent_data_spec.md
databricks-project-templates/cookiecutter-databricks-pipeline/: cookiecutter.json
databricks-project-templates/cookiecutter-databricks-pipeline/{{cookiecutter.project_slug}}/: .gitignore  README.md  requirements-dev.txt  requirements.txt
docs/: PACKAGING.md  REPOSITORY_RELATIONSHIPS.md  RESOURCES.md  SYMLINKS.md  constitution.md
docs-agentic-data-engineer/knowledge_base/medallion-architecture/: design-rationale.md  layer-specifications.md  naming-conventions.md  table-categories.md  technical-standards.md
docs-agentic-data-engineer/knowledge_base/pipeline/: lakeflow-pipelines.md  materialized-views.md  streaming-tables.md
docs-agentic-data-engineer/knowledge_base/pyspark-standards/: README.md  configuration.md  data_coverage_instructions.md  import-organization-rule.md
docs-agentic-data-engineer/knowledge_base/python-standards/: coding.md  testing_structure.md
docs/how_to_guides/: add_update_specialised_sub_agents.md  agents_vs_skills.md  consumer_onboarding.md  consumer_onboarding_greenfield.md  contributor_onboarding.md  troubleshooting.md  update_speckit_constitution.md
docs/knowledge_base/: skyscanner_conceptual_data_model.md
docs/knowledge_base/data-platform/: databricks-system-tables.md
docs/knowledge_base/data_platform/: catalog-structure.md
docs/knowledge_base/dimensional-modeling/: dimensions.md  facts.md  naming_conventions.md
master_files/: pyproject.toml
reports/: agents_and_skills_complete_reference.md  skyscanner_conceptual_data_model.md
schema/data_product/odps/: README.md
scripts/: activate-pyenv.sh  build-fat-dist.sh  databricks-auth-setup-zsh.sh  databricks-auth-setup.sh  databricks-deploy-with-retry.sh  deploy-databricks.sh  setup-symlinks.sh  verify-packaging.sh
scripts_shared/: databricks-auth-setup-zsh.sh
shared_agents_usage_docs/: README-claude-agent-template-generator.md  README-coding-agent.md  README-data-contract-agent.md  README-data-naming-agent.md  README-data-profiler-agent.md  README-decision-documenter-agent.md  README-dimensional-modeling-agent.md  README-makefile-formatter.md  README-materialized-view-agent.md  README-medallion-architecture-agent.md  README-project-structure-agent.md  README-pyproject-formatter.md  README-pyspark-standards-agent.md  README-streaming-tables-agent.md  README-transformation-validation-agent.md
shared_scripts/: databricks-auth-setup.sh
specs/001-ai-native-data-eng-process/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-makefile-build-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-spark-session-utilities/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-monte-carlo-utilities/: spec.md
specs/004-dqx-utilities/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-separate-utilities/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-claude-agent-templates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-rename-docs-dir/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/agentic_data_engineer/: __init__.py  shared_agents_usage_docs  shared_scripts
(+102 files in other folders)
