[tool.poetry]
name = "agentic-data-engineer"
version = "0.1.0"
description = "AI-native data engineering utilities and tools"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.4.0"
pydantic = "^2.0.0"
pyyaml = "^6.0"
scipy = "^1.11.0"
numpy = "^1.24.0"
mcp = "^1.2.1"
reportlab = "^4.0.0"

# Git dependencies pinned to dev branch across all packages
spark-session-utils = { git = "https://github.com/Skyscanner/spark-session-utils.git", branch = "dev" }
data-catalog-utils = { git = "https://github.com/Skyscanner/data-catalog-utils.git", branch = "dev" }
data-shared-utils = { git = "https://github.com/Skyscanner/data-shared-utils.git", branch = "dev" }
data-observability-utils = { git = "https://github.com/Skyscanner/data-observability-utils.git", branch = "dev" }
data-quality-utils = { git = "https://github.com/Skyscanner/data-quality-utils.git", branch = "dev" }

skyscanner-databricks-utils = { git = "https://github.com/Skyscanner/databricks-utils.git", branch = "main" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.11.13"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
