[tool.poetry]
name = "agentic-data-engineer"
version = "1.0.0"
description = "All-in-one data engineering platform with Claude AI integration"
authors = ["Skyscanner Data Engineering <data-engineering@skyscanner.net>"]
readme = "README.md"
packages = [
    { include = "agentic_data_engineer", from = "src" }
]

[[tool.poetry.source]]
name = "skyscanner-artifactory"
url = "https://artifactory.skyscannertools.net/artifactory/api/pypi/pypi/simple/"
priority = "primary"


[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.4.0"
pydantic = ">=2.0.0"  # JSON Schema generation from type hints
pyyaml = "^6.0"
scipy = "^1.11.0"
numpy = "^1.24.0"
reportlab = "^4.0.0"

# agentic data engineer repos
skyscanner-databricks-utils = ">=0.2.2"
skyscanner-data-knowledge-base-mcp = ">=1.0.5"
skyscanner-spark-session-utils = "1.0.1"
skyscanner-data-shared-utils = "1.0.2"


[tool.poetry.group.cli.dependencies]
databricks-sdk = ">=0.18.0"
databricks-cli = ">=0.18.0"
click = ">=8.1.0"
rich = ">=13.0.0"
pandas = ">=2.0.0"


[tool.poetry.group.mcp.dependencies]
mcp = {version = ">=1.2.1", python = ">=3.10"}  # Official MCP SDK for protocol implementation (requires Python 3.10+)
httpx = ">=0.24.0"  # HTTP client for async requests
anyio = ">=3.0.0"  # Async compatibility layer


[tool.poetry.group.dev.dependencies]
black = ">=23.0.0"
ruff = "^0.14.7"
flake8 = ">=6.0.0"
flake8-pyproject = ">=1.2.0"
pre-commit = ">=4.0.1"


[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.21.0,<0.23.0"  # Async test support for MCP integration tests (0.23.x has backports issues)
pyyaml = ">=6.0"
jsonschema = ">=4.20.0"  # JSON Schema validation for contract tests
delta-spark = "==3.2.0"  # Delta Lake support for local integration testing


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
