[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-ai-agents"
version = "0.1.0"
description = "AI agents for Databricks data engineering development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Data Platform Team", email = "data-platform@company.com"}
]
keywords = ["databricks", "ai", "agents", "code-generation", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.0.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "cookiecutter>=2.5.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
databricks-agent = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/company/databricks-ai-agents"
Documentation = "https://databricks-ai-agents.readthedocs.io"
Repository = "https://github.com/company/databricks-ai-agents"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "cli*", "mcp*", "config*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
