[tool.poetry]
name = "{{git-repo-name}}"
version = "0.1.0"
description = "{{git repo description}}"
authors = ["{{squad name}}"]
readme = "README.md"
license = "MIT"
packages = []

# ============================================================================
# Poetry source
# ============================================================================
[[tool.poetry.source]]
name = "skyscanner-artifactory"
url = "https://artifactory.skyscannertools.net/artifactory/api/pypi/pypi/simple"
priority = "primary"


# ============================================================================
# Dependencies
# ============================================================================

[tool.poetry.dependencies]
python = ">=3.10,<4.0" # Databricks Runtime 12.2 LTS compatible, allows modern Python versions
sqlglot = ">=27.0.0"  # SQL parsing and modification for query rewriting
databricks-cli = ">=0.18.0"  # Databricks CLI tool
pycarlo = ">=0.12.28" # for data observability

# Note: Internal dependencies
# Git dependencies pinned to main branch across all packages
agentic-data-engineer = "1.0.0"

# ============================================================================
# CLI Dependencies
# ============================================================================

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
databricks-sdk = ">=0.18.0"
databricks-cli = ">=0.18.0"
click = ">=8.1.0"
rich = ">=13.0.0"
pandas = ">=2.0.0"


# ============================================================================
# MCP Dependencies
# ============================================================================

[tool.poetry.group.mcp]
optional = true

[tool.poetry.group.mcp.dependencies]
mcp = {version = ">=1.2.1", python = ">=3.10"}  # Official MCP SDK for protocol implementation (requires Python 3.10+)
pydantic = ">=2.0.0"  # JSON Schema generation from type hints
httpx = ">=0.24.0"  # HTTP client for async requests
anyio = ">=3.0.0"  # Async compatibility layer


# ============================================================================
# Dev Dependencies
# ============================================================================

[tool.poetry.group.dev.dependencies]
black = ">=23.0.0"
ruff = "^0.14.7"
flake8 = ">=6.0.0"
flake8-pyproject = ">=1.2.0"
pre-commit = ">=4.0.1"


# ============================================================================
# Test Dependencies
# ============================================================================

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.21.0,<0.23.0"  # Async test support for MCP integration tests (0.23.x has backports issues)
pyyaml = ">=6.0"
jsonschema = ">=4.20.0"  # JSON Schema validation for contract tests
delta-spark = "==3.2.0"  # Delta Lake support for local integration testing


# ============================================================================
# Build System
# ============================================================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Testing Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================================================
# Code Quality Configuration
# ============================================================================

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
)/
'''

# Note: Ruff configuration moved to ruff.toml
# See ruff.toml for linting, formatting, and import order rules

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # Whitespace before ':' (conflicts with Black)
    "E266",  # Too many leading '#' for block comment
    "E501",  # Line too long (handled by Black)
    "W503",  # Line break before binary operator
]
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
    ".tox",
    ".pytest_cache",
]
per-file-ignores = [
    "__init__.py:F401",
]



# ============================================================================
# Test Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
